--- a/src/components/AddTouristPlace.css
+++ b/src/components/AddTouristPlace.css
@@ -10,6 +10,11 @@
     color: red;
 }
 
+small {
+    color: red;
+    position: absolute;
+}
+
 .form-control {
     color: black;
     background-color: rgb(239 239 239);
@@ -22,6 +27,10 @@
     outline: none !important;
     border:1px solid red;
     box-shadow: 0 0 10px #719ECE;
+}
+
+.form-group {
+    margin-bottom: 20px;
 }
 
 .button .col-sm-2 {
