--- a/src/components/AddTouristPlace.css
+++ b/src/components/AddTouristPlace.css
@@ -1,68 +1,68 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .heading {
-    text-align: center;
+  text-align: center;
 }
 
 .required {
-    color: red;
+  color: red;
 }
 
 small {
-    color: red;
-    position: absolute;
+  color: red;
+  position: absolute;
 }
 
 .form-control {
-    color: black;
-    background-color: rgb(239 239 239);
-    border: 1px solid black;
-    border-right-color: rgb(239 239 239);
-    border-bottom-color: rgb(239 239 239);
+  color: black;
+  background-color: rgb(239 239 239);
+  border: 1px solid black;
+  border-right-color: rgb(239 239 239);
+  border-bottom-color: rgb(239 239 239);
 }
 
 .form-control:focus {
-    outline: none !important;
-    border:1px solid red;
-    box-shadow: 0 0 10px #719ECE;
+  outline: none !important;
+  border: 1px solid red;
+  box-shadow: 0 0 10px #719ece;
 }
 
 .form-group {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .button .col-sm-2 {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
 
-.btn {    
-    line-height: 1.5;
-    border: 1px solid black;
-    color: white;
+.btn {
+  line-height: 1.5;
+  border: 1px solid black;
+  color: white;
 }
 
 .btn-submit {
-    background-color: #5cb85c;
-    border-top-color: #5cb85c;
-    border-left-color: #5cb85c;
-    margin-right: 10px;
+  background-color: #5cb85c;
+  border-top-color: #5cb85c;
+  border-left-color: #5cb85c;
+  margin-right: 10px;
 }
 
 .btn-reset {
-    background-color: #f0ad4e;
-    border-top-color: #f0ad4e;
-    border-left-color: #f0ad4e;
+  background-color: #f0ad4e;
+  border-top-color: #f0ad4e;
+  border-left-color: #f0ad4e;
 }
 
 a {
-    color: #00a9eb;
-    font-weight: bold;
+  color: #00a9eb;
+  font-weight: bold;
 }
 
 .link {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  justify-content: flex-end;
 }
